# session-02-JT

./: pyproject.toml
app/: main.py  settings.py
