[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["ArsalanAyaz <henrykoff7788@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pytest = "^8.1.1"
pydantic = "^2.7.0"
sqlmodel = "^0.0.16"
psycopg = {extras = ["binary"], version = "^3.1.18"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
